# almanac_tng

./: .coveragerc  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  build_docker.sh  pyproject.toml  run_lab  setup.cfg  setup.py  tox.ini
.github/workflows/: almanac-tests.yml  release.yml
docs/: conf.py  index.rst
docs/mmt_almanac/: index.rst
docs/mmtwfs/: index.rst
mmt_almanac/: __init__.py  almanac.py  ascii.py  conftest.py  header.txt  json.py  update_iers_a.py
mmt_almanac/tests/: coveragerc  test_ascii.py  test_daily.py  test_json.py  test_monthly.py  test_version.py  test_yearly.py
notebooks/: almanac_dev.ipynb  ascii.ipynb
