[metadata]
name = mmt_almanac
provides = mmt_almanac
author = T. E. Pickering
author_email = tim@mmto.org
license = BSD 3-Clause License
license_file = LICENSE.rst
url = https://github.com/MMTObservatory/almanac_tng
github_project = MMTObservatory/almanac_tng
edit_on_github = True
description = MMTO Almanac and almanac utilities
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy

[options]
python_requires = >=3.7
packages = find:
setup_requires =
    setuptools_scm
    numpy>=1.13
install_requires =
    numpy>=1.13
    astropy>=3.2
tests_require =
    pytest
    coverage
zip_safe = False

[options.extras_require]
all =
    astroplan
    skyfield
    pandas
    matplotlib>=2.2
docs =
    sphinx
    sphinx-astropy
test =
    pytest
    pytest-cov
    pytest-astropy

[options.package_data]
mmt_almanac = header.txt

[tool:pytest]
minversion = 4.6
testpaths = "mmt_almanac"
norecursedirs = "docs[\/]_build"
doctest_plus = disabled
addopts = -p no:warnings
